Mon Oct 20 16:13:48 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_single_transform_list): Fixlet for Fortran.
	From Bernard Urban.

	* libtool.am: Remove _libs, for libtool 1.0d.  From Gord
	Matzigkeit.

Sun Oct 19 22:59:35 1997  Tom Tromey  <tromey@cygnus.com>

	* texinfos.am: Bug fix.  From John W. Coomes.

Mon Sep 29 12:57:00 1997  Tom Tromey  <tromey@cygnus.com>

	* Released 1.2c.

	* automake.in (handle_dist_worker): In topmost directory of
	project, use `distdir', not `top_distdir', as argument to
	--output-dir; likewise when building in subdirs.

Sun Sep 28 15:55:46 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/sanity.m4: Test $*, not $@.  From Akim Demaille.

	* automake.in (handle_minor_options): New sub.
	(check_gnits_standards): Don't handle README-alpha here.
	(handle_dist_worker): Check NEWS file if `check-news' option
	requested.
	(generate_makefile): Run handle_minor_options.
	(handle_options): Handle readme-alpha and check-news.  Set them if
	--gnits.

	* depend.am (MKDEP): Use $(CC), not gcc.

Wed Sep 24 23:48:26 1997  Tom Tromey  <tromey@cygnus.com>

	* Release 1.2b.

	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Make sure this is run before
	AC_PROG_CPP.  From Markus Oberhumer.

Fri Sep 12 00:04:19 1997  Paul Eggert  <eggert@twinsun.com>

	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Don't look at __STDC__;
	look only at whether function prototypes are supported.

Wed Sep 24 16:10:37 1997  Tom Tromey  <tromey@cygnus.com>

	* Various: Put "-" before each `rm' line.  This avoids a bug in
	some losing makes (Ultrix, 4.3 BSD).

	* automake.in (handle_dist_worker): Correctly handle subdirs that
	have their own configure.in.  From Peter Mattis.

	* automake.in (handle_yacc_lex_cxx): Handle de-ansi-fied sources
	in srcdir as well as build dir.

	* automake.in (scan_one_configure_file): Detect AC_OUTPUT().
	(handle_single_transform_list): Don't apply length() to a list.

	* automake.in (handle_programs): Define _DEPENDENCIES variable if
	not defined by user.
