@@ -1,3 +1,8 @@
+Tue Oct 21 00:39:44 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* m4/sanity.m4: If `ls' completely fails, die.  From Jim
+	Meyering.
+
 Mon Oct 20 16:13:48 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (handle_single_transform_list): Fixlet for Fortran.
